<!--
  ~ Copyright 2016 Alex_ZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Voice Monitor</string>
    <string name="record">Record</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>
    <string name="setting">Setting</string>
    <string name="head_portrait">Head Portrait</string>
    <string name="history">History</string>
    <string name="analysis">Analysis</string>
    <string name="gadget">Gadget</string>
    <string name="no_data_can_be_displayed">No data can be displayed.</string>
    <string name="immediate_experience">Immediate Experience</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="the_total_records">The total records</string>
    <string name="icon">icon</string>
    <string name="minutes">minutes</string>
    <string name="zero">0</string>
    <string name="times">times</string>
    <string name="average">Average</string>
    <string name="db">db</string>
    <string name="max_min">Max/Min</string>
    <string name="offline_map">Offline Map</string>
    <string name="map_setting">Map Setting</string>
    <string name="cancel">Cancel</string>
    <string name="move_to">Move To</string>
    <string name="ask_for_permission">Ask for permission</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="loaction_colon">Location:</string>
    <string name="weather_colon">Weather:</string>
    <string name="location_weather">Location Weather</string>
    <string name="live">Live</string>
    <string name="forecast">Forecast</string>
    <string name="input_city_name">Input city name</string>
    <string name="inquiry">Inquiry</string>
    <string name="input_is_empty">Input is empty</string>
    <string name="no_result">No Result</string>
    <string name="loading">Loading…</string>
    <string name="uploading">Uploading…</string>
    <string name="inquire_weather">Inquire Weather</string>
    <string name="double_minus">--</string>
    <string name="initial_time">00:00:00</string>
    <string name="duration">Duration</string>
    <string name="max_db">Max_DB</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="login_success">LOGIN SUCCESS</string>
    <string name="login_password_wrong">PASSWORD WRONG</string>
    <string name="login_account_no_exit">ACCOUNT NO EXIT</string>
    <string name="unknown_error">UNKNOWN ERROR</string>
    <string name="upload_succeed">UPLOAD SUCCEED</string>
    <string name="upload_failed">UPLOAD FAILED</string>
    <string name="bar">Bar</string>
    <string name="ktv">KTV</string>
    <string name="restaurant">Restaurant</string>
    <string name="other">Other</string>
    <string name="summary">Summary</string>
    <string name="summary_colon">Summary:</string>
    <string name="all_offline">ALL   CITY</string>
    <string name="download_offline">DOWN MANAGE</string>
    <string name="login_exit">Login Exit</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="change">CHANGE</string>
    <string name="sign_up">Sign up</string>
    <string name="password_again">Password Again</string>
    <string name="different_password">Different Password</string>
    <string name="sign_up_succeed">Sign Up Succeed</string>
    <string name="account_exit">Account Exit</string>
    <string name="feedback">Feedback</string>
    <string name="time">Time</string>
    <string name="historical_details">Historical Details</string>
    <string name="record_time_colon">Record Time:</string>
    <string name="min_db">Min_DB</string>
</resources>
