<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Alex_ZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <!-- 记录时间布局 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_item_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_time_colon"
            android:layout_marginEnd="@dimen/main_item_margin_top"
            android:textColor="@color/colorWhile"/>

        <TextView
            android:id="@+id/historical_details_fragment_record_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhile"/>
    </LinearLayout>

    <!-- 平均数布局 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_item_margin_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average"
            android:textColor="@color/colorWhile"/>

        <TextView
            android:id="@+id/historical_details_fragment_average_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/zero"
            android:textColor="@color/colorWhile"
            android:textSize="70sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/historical_details_fragment_average_tv"
            android:layout_toEndOf="@id/historical_details_fragment_average_tv"
            android:text="@string/db"
            android:textColor="@color/colorWhile"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_item_margin_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_db"
                android:textColor="@color/colorWhile"/>

            <TextView
                android:id="@+id/historical_details_fragment_min_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/colorWhile"
                android:textSize="33sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/historical_details_fragment_timekeeper_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/initial_time"
            android:textColor="@color/colorWhile"
            android:textSize="44sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_db"
                android:textColor="@color/colorWhile"/>

            <TextView
                android:id="@+id/historical_details_fragment_max_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/colorWhile"
                android:textSize="33sp"/>
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>