<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Alex_ZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/record_fragment_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/record_db_fragment_db_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/double_minus"
            android:textColor="@color/colorWhile"
            android:textSize="99sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/record_db_fragment_db_tv"
            android:alpha="0.5"
            android:text="@string/db"
            android:textColor="@color/colorWhile"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:id="@+id/record_db_fragment_duration_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/record_db_fragment_duration_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_time"
                android:textColor="@color/colorWhile"
                android:textSize="44sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:text="@string/duration"
                android:textColor="@color/colorWhile"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/record_db_fragment_average_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="33dp"
            android:layout_toStartOf="@id/record_db_fragment_duration_ll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/record_db_fragment_average_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/double_minus"
                android:textColor="@color/colorWhile"
                android:textSize="44sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:text="@string/average"
                android:textColor="@color/colorWhile"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/record_db_fragment_max_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="33dp"
            android:layout_toEndOf="@id/record_db_fragment_duration_ll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/record_db_fragment_max_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/double_minus"
                android:textColor="@color/colorWhile"
                android:textSize="44sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:text="@string/max_db"
                android:textColor="@color/colorWhile"/>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/record_db_fragment_switch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_weight="2">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/record_db_fragment_info_lc"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>


</LinearLayout>