<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Alex_ZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/MainTitleBarStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_bar_title_size"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--总体预览-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/the_total_records"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/forward_arrow_gray"/>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/main_record_minutes_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:text="@string/zero"
                        android:textSize="70sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/main_record_minutes_tv"
                        android:layout_toEndOf="@id/main_record_minutes_tv"
                        android:text="@string/minutes"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/main_record_record_times"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/record"/>

                        <TextView
                            android:id="@+id/main_record_record_times_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/main_record_record_times"
                            android:text="@string/zero"
                            android:textSize="33sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/main_record_record_times_tv"
                            android:layout_toEndOf="@id/main_record_record_times_tv"
                            android:text="@string/times"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <TextView
                            android:id="@+id/main_record_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/average"/>

                        <TextView
                            android:id="@+id/main_record_average_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/main_record_average"
                            android:layout_centerHorizontal="true"
                            android:text="@string/zero"
                            android:textSize="33sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/main_record_average_tv"
                            android:layout_toEndOf="@id/main_record_average_tv"
                            android:text="@string/db"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/main_record_max_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/max_min"/>

                        <TextView
                            android:id="@+id/main_record_max_min_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/main_record_max_min"
                            android:layout_centerHorizontal="true"
                            android:layout_toStartOf="@+id/main_record_max_min_unit"
                            android:text="@string/zero"
                            android:textSize="33sp"/>

                        <TextView
                            android:id="@id/main_record_max_min_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/main_record_max_min_tv"
                            android:layout_alignParentEnd="true"
                            android:text="@string/db"/>

                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/white"
                android:orientation="vertical">



                <com.amap.api.maps.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                </com.amap.api.maps.MapView>

                <!--<com.alex.alexswitch.ISwitch-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"/>-->


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>