<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Alex_ZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/MainTitleBarStyle">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/discover"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_bar_title_size"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_loop_advertisement_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/main_item_margin_top"
        android:layout_marginTop="@dimen/main_item_margin_top"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_discover_bar_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/bar"
                android:src="@drawable/bar"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center_horizontal"
                android:text="@string/bar"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_discover_ktv_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ktv"
                android:src="@drawable/ktv"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center_horizontal"
                android:text="@string/ktv"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_discover_restaurant_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/restaurant"
                android:src="@drawable/restaurant"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center_horizontal"
                android:text="@string/restaurant"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_discover_other_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/other"
                android:src="@drawable/more"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center_horizontal"
                android:text="@string/other"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>